<resources xmlns:bWARNING="http://schemas.android.com/tools">
    <string name="app_name">NOTIFY</string>
    <string name="Welcome_text">Welcome To</string>
    <string name="my_notes">My Notes</string>
    <string name="make_note">Create a Note</string>
    <string name="hint_text">Type your note here</string>
    <string name="read_note">Read &amp; Edit Your Notes</string>
    <string name="download_notes">Download Notes</string>
    <string name="start_group">Start a New NotePad</string>
    <string name="join_instructions">Download All Notes From The Online Storage... </string>
    <string name="make_group_instructions">Enter The New NotePad Name. Up To 12 Letters Can Be Used. Any Name With Numbers Or Special Characters Will Be Rejected.</string>
    <string name="make_hint_name_text">NotePad Name</string>
    <string name="make_group_warning"><b>WARNING:</b> When you create a new Notepad all of your existing notes will be deleted. This cannot be undone!</string>
    <string name="download_notes_warning">When you download notes they will be added to your existing notes.</string>


    <string name="btnReadNotes">Read Notes</string>
    <string name="btnStartNewGroup">Create New NotePad</string>
    <string name="btnJoinGroup">Join a Group</string>
    <string name="btnSaveNote">Save This Note</string>
    <string name="btnSaveChanges">Save Changes</string>
    <string name="btnMakeNotes">Write Notes</string>
    <string name="btnJoinGroupSave">Download Notes File</string>
    <string name="btnMakeGroupSave">Create New NotePad</string>
    <string name="btnnext_note">Next</string>
    <string name="btnprevious_note">Prev</string>


</resources>
