<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.appdeveloper.notify.NotifyMainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text="@string/Welcome_text"
            android:textAlignment="center"
            android:textColor="@color/textRed"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_weight="4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/textRed"
            android:textSize="50sp" />

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="top|center"
            android:paddingTop="5dp"
            android:src="@drawable/icon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/btnRead"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/textRed"
            android:elevation="10dp"
            android:onClick="onClickReadNotes"
            android:text="@string/btnReadNotes"
            android:textAlignment="center"
            android:textColor="@color/textLight"
            android:textSize="20sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/btnWrite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/textRed"
            android:elevation="10dp"
            android:onClick="onClickMakeNote"
            android:text="@string/btnMakeNotes"
            android:textAlignment="center"
            android:textColor="@color/textLight"
            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/textRed"
            android:orientation="horizontal"
            android:text="@string/download_notes"
            android:textAlignment="center"
            android:textColor="@color/textLight"
            android:textSize="16sp"
            android:onClick="onClickDownloadNotes"/>

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/textRed"
            android:orientation="horizontal"
            android:text="@string/btnStartNewGroup"
            android:textAlignment="center"
            android:textColor="@color/textLight"
            android:textSize="16sp"
            android:onClick="onClickStartGroup"/>
    </LinearLayout>

</LinearLayout>
