<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/start_group"
            android:textColor="@color/textRed"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="3"
        android:background="@color/material_Grey_50"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <EditText
            android:id="@+id/makeGroupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/make_hint_name_text"
            android:textSize="16sp"
            android:inputType="text"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/make_group_instructions"
            android:textSize="12sp"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:text="@string/make_group_warning"
            android:textSize="14sp"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
             <TextView
                android:layout_width="0dp"
                 android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="CURRENT GROUP NAME: "
                android:textSize="12sp"
                android:paddingLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />
            <TextView
                android:id="@+id/showGroupDetails"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:textSize="12sp"
                android:paddingLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />

        </LinearLayout>-->


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/makeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/textRed"
            android:text="@string/btnMakeGroupSave"
            android:textAlignment="center"
            android:textColor="@color/textLight"
            android:textSize="20sp"
            android:onClick="onClickGroupMake"/>
    </LinearLayout>

</LinearLayout>