<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text="@string/make_note"
            android:textColor="@color/textRed"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="3"
        android:background="@color/material_Grey_50"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <EditText
            android:id="@+id/writeNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/hint_text"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="2000"
            android:maxLines="12"
            android:textSize="16sp"
            />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/saveNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/textRed"
            android:text="@string/btnSaveNote"
            android:textAlignment="center"
            android:textColor="@color/textLight"
            android:textSize="20sp"
            android:onClick="onClickSaveNote"/>
    </LinearLayout>

</LinearLayout>