<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text="@string/read_note"
            android:textColor="@color/textRed"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="20dp"
        android:layout_weight="5">

        <EditText
            android:id="@+id/noteOutput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:paddingLeft="10dp"
            android:text=""
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/saveNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/textRed"
            android:onClick="onClickSaveEdit"
            android:text="@string/btnSaveChanges"
            android:textAlignment="center"
            android:textColor="@color/textLight"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/previousNote"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/textRed"
            android:text="@string/btnprevious_note"
            android:textAlignment="center"
            android:textColor="@color/textLight"
            android:textSize="20sp"
            android:onClick="onClickGotoPrevious"/>

        <Button
            android:id="@+id/nextNote"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/textRed"
            android:text="@string/btnnext_note"
            android:textAlignment="center"
            android:textColor="@color/textLight"
            android:textSize="20sp"
            android:onClick="onClickGotoNext"/>
    </LinearLayout>



</LinearLayout>